# llm-manager

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .pre-commit-config.yaml  alembic.ini  pyproject.toml  requirements.txt  setup.py
backend/api/v1/: __init__.py
backend/api/v1/agents/: routes.py
backend/core/llm/: base.py
backend/core/llm/agents/: custom_agent.py
backend/core/llm/callbacks/: usage_tracker.py
backend/core/llm/chains/: document_qa.py
backend/core/tenants/: tenant_manager.py
backend/db/models/: tenant.py
backend/scripts/: setup.sh  start.sh
docs/: PROJECT_GUIDE.md
docs/architecture/: directory-structure.md
frontend/: .env.example  .eslintrc.json  package.json
frontend/app/: layout.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: providers.tsx
frontend/components/agents/: agent-creator.tsx
frontend/components/chat/: agent-chat.tsx
frontend/components/dashboard/: usage-metrics.tsx
frontend/hooks/: use-chat.ts
frontend/scripts/: setup.sh
